# cisegmentation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.gradio  Dockerfile.jupyter  Dockerfile.models  Dockerfile.models.dockerignore  Dockerfile.runtime  Dockerfile.runtime.dockerignore  LICENSE  README.md  bilayers_cli.py  builddocker.cmd  builddocker_gradio.cmd  builddocker_jupyter.cmd  config.yaml  create_env.cmd  environment.yml  launch.cmd  launcher.py  pushdocker.cmd  pyproject.toml  release_github.cmd  requirements.txt  requirements_dev.txt  requirements_gradio.txt  requirements_jupyter.txt  requirements_launcher.txt  test.cmd  wrapper.py
cisegmentation/: __init__.py  adapters.py  benchmark.py  engine.py  measurements.py  ome_zarr_io.py  registry.py  reporting.py  roundtrip.py  settings.py
docs/: measurements.md
tests/: conftest.py  test_adapters_and_benchmark.py  test_cellpose_sam_v2_fixture.py  test_config_and_wrapper.py  test_docker_runtime_cache.py  test_engine_timings.py  test_environment_config.py  test_expansion_fixture.py  test_launcher.py  test_measurements.py  test_model_downloader_contract.py  test_multistep.py  test_ome_zarr_io.py  test_omero_probe_runner.py  test_registry_and_settings.py  test_release_scripts.py  test_reporting.py  test_roundtrip.py  test_spotiflow_refinement.py  test_spotiflow_refinement_fixture.py  test_stardist_smoothing_fixture.py  test_wrapper.py
tools/: __init__.py  cuda_smoke.py  docker_build_state.py  docker_runtime_cache_id.py  download_models.py  omero_roundtrip.py  qupath_ome_zarr_smoke.groovy  (+1 more)
(+51 files in other folders)
