[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cisegmentation"
version = "0.1.0"
description = "Bilayers-compatible OME-Zarr segmentation workflow"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["cisegmentation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["gpu: requires CUDA and downloaded inference models", "omero: requires the configured local OMERO/BIOMERO services"]
